Fixed issue with the page footer being wider than the screen, causing a horizontal scrollbar to appear on the window

--- a/app/styles/themes/main.scss
+++ b/app/styles/themes/main.scss
@@ -1427,6 +1427,10 @@ footer {
   z-index: 100;
 }
 
+.row {
+  margin-right: 0 !important;
+}
+
 .footer-background {
   background-color: $footer-colour;
   padding-top: 10px;
